# obs-studio

./: CMakeLists.txt
CI/: before-script-osx.sh  install-dependencies-osx.sh
CI/util/: build-package-deps-osx.sh
UI/: CMakeLists.txt  obs-app.cpp  platform-osx.mm  platform.hpp  volume-control.cpp  window-basic-auto-config.cpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main-transitions.cpp  window-basic-main.hpp  window-basic-settings.cpp
UI/data/locale/: en-US.ini
UI/forms/: OBSBasicSettings.ui
UI/frontend-plugins/frontend-tools/: CMakeLists.txt
libobs/: obs-cocoa.m  obs-module.c  obs-module.h  obs-source.c  obs.c  obs.hpp
libobs-opengl/: gl-helpers.h
libobs/graphics/: graphics.h
libobs/media-io/: audio-io.c
libobs/util/: platform-nix.c
plugins/coreaudio-encoder/: CMakeLists.txt  encoder.cpp  windows-imports.h
plugins/decklink/mac/: CMakeLists.txt
plugins/image-source/: CMakeLists.txt
plugins/linux-capture/: xshm-input.c
plugins/mac-avcapture/: CMakeLists.txt
plugins/mac-capture/: CMakeLists.txt
plugins/mac-syphon/: CMakeLists.txt
plugins/mac-videotoolbox/: encoder.c
plugins/mac-vth264/: CMakeLists.txt  encoder.c
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg.c  texture-amf.cpp
plugins/obs-filters/: CMakeLists.txt
plugins/obs-libfdk/: CMakeLists.txt
plugins/obs-outputs/: CMakeLists.txt
plugins/obs-qsv11/: CMakeLists.txt
plugins/obs-text/: CMakeLists.txt
plugins/obs-transitions/: CMakeLists.txt
plugins/obs-x264/: CMakeLists.txt
plugins/rtmp-services/: CMakeLists.txt
plugins/text-freetype2/: CMakeLists.txt
plugins/vlc-video/: CMakeLists.txt
plugins/win-capture/: CMakeLists.txt
